include_directories(${DRAIOS_DEPENDENCIES_DIR}/protobuf-${DRAIOS_PROTOBUF_VERSION}/target/include)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/zlib-${DRAIOS_ZLIB_VERSION})
include_directories(${DRAIOS_DEPENDENCIES_DIR}/LuaJIT-${DRAIOS_LUAJIT_VERSION}/src)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/curl-${DRAIOS_CURL_VERSION}/include)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/libb64-${DRAIOS_B64_VERSION}/include)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/openssl-${DRAIOS_OPENSSL_VERSION}/target/include)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/poco-${DRAIOS_POCO_VERSION}/target/include)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/jq-${DRAIOS_JQ_VERSION})
include_directories(${PROJECT_SOURCE_DIR}/../sysdig/common)
include_directories(${PROJECT_SOURCE_DIR}/../sysdig/userspace/libscap)
include_directories(${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp)
include_directories(${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/third-party/jsoncpp)
include_directories(${PROJECT_SOURCE_DIR}/../falco/userspace/engine)
include_directories(${PROJECT_SOURCE_DIR}/userspace/libsanalyzer)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/yaml-${DRAIOS_YAML_VERSION}/target/include)
include_directories(${DRAIOS_DEPENDENCIES_DIR}/boost_${DRAIOS_BOOST_VERSION})
include_directories(${DRAIOS_DEPENDENCIES_DIR}/grpc-${DRAIOS_GRPC_VERSION}/include)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/../draiosproto)

add_definitions( -DHAS_ANALYZER )
add_definitions(-DK8S_DISABLE_THREAD)

add_library(sanalyzer STATIC
	analyzer.cpp
	analyzer_fd.cpp
	analyzer_parsers.cpp
	analyzer_thread.cpp
	analyzer_utils.cpp
	baseliner.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/chisel.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/chisel_api.cpp
	cm_quantile.c
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/cyclewriter.cpp
	connectinfo.cpp 
	config.cpp
	delays.cpp
	falco_events.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/container.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/docker.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/dumper.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/event.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/eventformatter.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/fdinfo.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/filter.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/filterchecks.cpp
	heap.c
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/http_parser.c
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/http_reason.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/ifinfo.cpp
	infrastructure_state.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/internal_metrics.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/third-party/jsoncpp/jsoncpp.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/logger.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/lua_parser.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/lua_parser_api.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/prefix_search.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/tracers.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/uri_parser.c
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/uri.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/sinsp_auth.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/sinsp_curl.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_api_error.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_api_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_component.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_daemonset_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_deployment_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_dispatcher.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_event_data.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_event_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_namespace_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_net.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_node_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_pod_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_replicationcontroller_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_replicaset_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_service_handler.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/k8s_state.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/json_query.cpp
	k8s_proto.cpp
	k8s_delegator.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/marathon_component.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/marathon_http.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/mesos_auth.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/mesos.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/mesos_collector.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/mesos_component.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/mesos_http.cpp
	memdumper.cpp
	mesos_proto.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/mesos_state.cpp
	metric_limits.cpp
	metrics.cpp
	parser_http.cpp
	parser_mysql.cpp
	parser_postgres.cpp
	parser_mongodb.cpp
	parser_tls.cpp
	sqlparser.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/parsers.cpp
	percentile.cpp
	procfs_parser.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/protodecoder.cpp
	protostate.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/threadinfo.cpp
	sched_analyzer.cpp
	scores.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/sinsp.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/stats.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/stopwatch.cpp
	tracer_emitter.cpp
	transactinfo.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/user_event.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/utils.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/value_parser.cpp
	${PROJECT_SOURCE_DIR}/../sysdig/userspace/libsinsp/viewinfo.cpp
	jmx_proxy.cpp
	statsite_proxy.cpp
	app_checks.cpp
	posix_queue.cpp
	coclient.cpp
	proc_config.h)

add_dependencies(sanalyzer draiosproto)

target_link_libraries(sanalyzer
	scap 
	falco_engine
	${DRAIOS_DEPENDENCIES_DIR}/zlib-${DRAIOS_ZLIB_VERSION}/libz.a
	${DRAIOS_DEPENDENCIES_DIR}/LuaJIT-${DRAIOS_LUAJIT_VERSION}/src/libluajit.a
	${DRAIOS_DEPENDENCIES_DIR}/curl-${DRAIOS_CURL_VERSION}/lib/.libs/libcurl.a
	${DRAIOS_DEPENDENCIES_DIR}/libb64-${DRAIOS_B64_VERSION}/src/libb64.a
	${DRAIOS_DEPENDENCIES_DIR}/poco-${DRAIOS_POCO_VERSION}/target/lib/libPocoNetSSL.a
	${DRAIOS_DEPENDENCIES_DIR}/poco-${DRAIOS_POCO_VERSION}/target/lib/libPocoCrypto.a
	${DRAIOS_DEPENDENCIES_DIR}/poco-${DRAIOS_POCO_VERSION}/target/lib/libPocoUtil.a
	${DRAIOS_DEPENDENCIES_DIR}/poco-${DRAIOS_POCO_VERSION}/target/lib/libPocoNet.a
	${DRAIOS_DEPENDENCIES_DIR}/poco-${DRAIOS_POCO_VERSION}/target/lib/libPocoFoundation.a
	${DRAIOS_DEPENDENCIES_DIR}/jq-${DRAIOS_JQ_VERSION}/.libs/libjq.a
	rt
	dl
	anl
	${DRAIOS_DEPENDENCIES_DIR}/openssl-${DRAIOS_OPENSSL_VERSION}/target/lib/libssl.a
	${DRAIOS_DEPENDENCIES_DIR}/openssl-${DRAIOS_OPENSSL_VERSION}/target/lib/libcrypto.a
	${DRAIOS_DEPENDENCIES_DIR}/yaml-${DRAIOS_YAML_VERSION}/target/lib/libyaml-cpp.a)

add_subdirectory(tests/01-open)
add_subdirectory(tests/02-stopcapture)
